# CodeGeeX4-QtCreator-Plugin

./: CMakeLists.txt  CodeGeeX4.json.in  CodeGeeX4_zh_CN.ts  README.md  codegeex4.qrc  codegeex4client.cpp  codegeex4client.h  codegeex4clientinterface.cpp  codegeex4clientinterface.h  codegeex4constants.h  codegeex4hoverhandler.cpp  codegeex4hoverhandler.h  codegeex4icons.h  codegeex4plugin.cpp  codegeex4projectpanel.cpp  codegeex4projectpanel.h  codegeex4settings.cpp  codegeex4settings.h  codegeex4suggestion.cpp  codegeex4suggestion.h  codegeex4tr.h
requests/: getcompletions.h
